fixing advisors title left-align issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -2769,7 +2769,9 @@ ul h2 {
 	float: left;	
 }
 
-
+.left {
+    float: left;
+}
 
 
 @media screen and (max-width: 1200px) {
